--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,39 +1,45 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+    enable_authenticator_manager: true # Activation du gestionnaire d'authentification Symfony
+
     providers:
-        users_in_memory: { memory: null }
+        users_in_database:
+            entity:
+                class: App\Entity\Utilisateur
+                property: mail # Spécifie la classe d'entité utilisée pour l'authentification, ainsi que le champ de propriété utilisé comme identifiant (ici, "mail")
+
+    password_hashers:
+        App\Entity\Utilisateur:
+            algorithm: "auto" # Sélection automatique de l'algorithme de hachage de mot de passe pour les utilisateurs
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+            security: false # Désactive la sécurité pour les routes de développement (profilage, débogage, ressources statiques)
+
         main:
-            lazy: true
-            provider: users_in_memory
+            lazy: true # Activation du chargement différé pour le pare-feu principal
+            provider: users_in_database # Utilise le fournisseur 'users_in_database' défini précédemment
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
+            form_login:
+                login_path: app_login # Définit le chemin de la page de connexion
+                check_path: app_login # Définit le chemin de vérification de la connexion
+                default_target_path: app_accueil # Redirige vers cette route après une connexion réussie
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            logout:
+                path: app_logout # Définit le chemin de déconnexion
+                target: app_login # Redirige vers la page de connexion après la déconnexion
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/$, roles: PUBLIC_ACCESS } # Autorise l'accès à la page d'accueil pour les utilisateurs non authentifiés
+        - { path: ^/inscription$, roles: PUBLIC_ACCESS } # Autorise l'accès à la page d'inscription pour les utilisateurs non authentifiés
+        - { path: ^/, roles: ROLE_USER } # Exige l'authentification pour toutes les autres routes
 
 when@test:
     security:
         password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
+            # Configuration spécifique pour les tests
             Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
                 algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+                cost: 4 # Coût minimal pour le hachage de mot de passe avec bcrypt
+                time_cost: 3 # Coût minimal pour le hachage de mot de passe avec Argon2
+                memory_cost: 10 # Coût minimal pour le hachage de mot de passe avec Argon2
