--- a/.env
+++ b/.env
@@ -26,7 +26,10 @@ APP_SECRET=70f53d64bb95eca70a247c9c0ff02af3
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3307/db_kinelib?serverVersion=mariadb-10.10.2&charset=utf8"
+
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
